--- a/HPP.html
+++ b/HPP.html
@@ -1,7 +1,7 @@
 <html>
 
 <body>
-<form id="infoForm" class="clientForm" action="http://localhost:8000/cgi-bin/submit.py">
+<form id="infoForm" class="clientForm" action="cgi-bin/submit.py">
 	Amount: <input type="text" id="paymentAmount" name="paymentAmount" value="199"/><br>
 	Currency: <input type="text" id="currencyCode" name="currencyCode" value="USD"/><br>
 	CountryCode: <input type="text" id="countryCode" name="countryCode" value="US"/><br>
@@ -15,6 +15,6 @@
 </form>
 </body>
 
-<link rel="stylesheet" type="text/css" href="http://localhost:8000/styles/style.css"/>
+<link rel="stylesheet" type="text/css" href="styles/style.css"/>
 
 </html>
