--- a/checkout.html
+++ b/checkout.html
@@ -2,7 +2,7 @@
 
 <head>
 	<script type="text/javascript" src="https://checkoutshopper-test.adyen.com/checkoutshopper/assets/js/sdk/checkoutSDK.1.0.min.js"></script>
-	<link rel="stylesheet" type="text/css" href="styles.css"></link>
+	<link rel="stylesheet" type="text/css" href="styles/style.css"></link>
 </head>
 
 <body>
@@ -27,5 +27,4 @@
 
 </html>
 
-<script type="text/javascript" src="setupCall.js"></script>
-<link rel="stylesheet" type="text/css" href="http://localhost:8000/styles/style.css"/>
+<script type="text/javascript" src="scripts/checkoutSetupCall.js"></script>
