add /app directory

--- a/checkout.html
+++ b/checkout.html
@@ -9,7 +9,7 @@
 	<h4>Checkout should appear below:</h4>
 	<div id="spacer">
 		<div class="checkout" id="checkout">
-			<form class="clientForm" id="infoForm" action="http://localhost:8000/cgi-bin/checkout_requester.py">
+			<form class="clientForm" id="infoForm" action="cgi-bin/checkout_requester.py">
 				<div class="inputHolder">Amount: <input type="text" id="value" name="value" value="199"/><br></div>
 				<div class="inputHolder">Currency: <input type="text" id="currency" name="currency" value="USD"/><br></div>
 				<div class="inputHolder">CountryCode: <input type="text" id="countryCode" name="countryCode" value="US"/><br></div>
