add allowedMethods to HPP

--- a/HPP.html
+++ b/HPP.html
@@ -2,6 +2,7 @@
 
 <body>
 <form id="infoForm" class="clientForm" action="cgi-bin/submit.py">
+	AllowedMethods: <input type="text" id="allowedMethods" name="allowedMethods" value=""/><br>
 	Amount: <input type="text" id="paymentAmount" name="paymentAmount" value="199"/><br>
 	Currency: <input type="text" id="currencyCode" name="currencyCode" value="USD"/><br>
 	CountryCode: <input type="text" id="countryCode" name="countryCode" value="US"/><br>
