--- a/checkout.html
+++ b/checkout.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-	<script type="text/javascript" src="https://checkoutshopper-test.adyen.com/checkoutshopper/assets/js/sdk/checkoutSDK.1.0.min.js"></script>
+	<script type="text/javascript" src="https://checkoutshopper-test.adyen.com/checkoutshopper/assets/js/sdk/checkoutSDK.1.2.0.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="styles/style.css"></link>
 </head>
 
@@ -23,6 +23,9 @@
 	</div>
 	<h4>Payment result:</h4>
 	<div id="paymentResult">"Patience is a virtue" - Confucius probably</div>
+	<h4>Verify result:</h4>
+	<input type="button" class="submitBtn inactive" id="verifyBtn" value="Verify Payment"/>
+	<div id="verifyResult"></div>
 </body>
 
 </html>
