--- a/skipDetails.html
+++ b/skipDetails.html
@@ -25,7 +25,8 @@ var formData = {
 		["merchantReference", "localhostSkipDetails"],
 		["channel", "Web"],
 		["merchantAccount", "ColinRood"],
-		["skinCode", "rKJeo2Mf"]],
+		["skinCode", "rKJeo2Mf"],
+		["hmacKey", "BE1C271E9CD9D2F6611D2C7064FE9EE314DA58539195E92BF5AC706209A514DB"]],
 	"hiddenFields": [
 		["endpoint", "skip_details"]],
 	"submitText": "Send request"
