move credentials back into submit.py, change checkout verify hiding

--- a/checkout.html
+++ b/checkout.html
@@ -23,9 +23,11 @@
 	</div>
 	<h4>Payment result:</h4>
 	<div id="paymentResult">"Patience is a virtue" - Confucius probably</div>
-	<h4>Verify result:</h4>
-	<input type="button" class="submitBtn inactive" id="verifyBtn" value="Verify Payment"/>
-	<div id="verifyResult"></div>
+	<div id="verifyContainer" class="inactive">
+		<h4>Verify result:</h4>
+		<input type="button" class="submitBtn" id="verifyBtn" value="Verify Payment"/>
+		<div id="verifyResult"></div>
+	</div>
 </body>
 
 </html>
