--- a/index.html
+++ b/index.html
@@ -7,16 +7,20 @@
 
 <body>
 	<h1>Integrations</h1>
-	<h3 class="index-header">HPP</h3>
+
+	<h3 class="index-header">Hosted Payment Pages (HPP)</h3>
 	<a class="index-link" href="HPP.html">Single Page Flow</a><br>
 	<a class="index-link" href="directory.html">Directory Lookup</a><br>
 	<a class="index-link" href="skipDetails.html">Skip Details</a><br>
 	<a class="index-link" href="HMAC.html">HMAC Calculation</a><br>
+
 	<h3 class="index-header">Checkout</h3>
 	<a class="index-link" href="checkout.html">Checkout</a><br>
+	
 	<h3 class="index-header">Cards</h3>
 	<a class="index-link" href="CSE.html">Client Side Encryption (CSE)</a><br>
 	<a class="index-link" href="SecuredFields.html">Secured Fields</a><br>
+	<a class="index-link" href="3DSecure.html">3D Secure</a><br>
 </body>
 
 </html>
