front end tweaks

--- a/HPP.html
+++ b/HPP.html
@@ -23,6 +23,8 @@ var formData = {
 		["countryCode", "US"],
 		["shopperLocale", "en_GB"],
 		["shopperReference", "localhostShopper1"],
+		["shopperEmail", "colin.rood@adyen.com"],
+		["recurringContract", "ONECLICK"],
 		["merchantReference", "localhostHPP"],
 		["merchantAccount", "ColinRood"],
 		["skinCode", "rKJeo2Mf"],
