add extra data to Checkout call

--- a/checkout_iframe.html
+++ b/checkout_iframe.html
@@ -9,16 +9,24 @@
 			<div class="inputHolder">Amount: <input type="text" id="value" name="value" value="199"/><br></div>
 			<div class="inputHolder">Currency: <input type="text" id="currency" name="currency" value="USD"/><br></div>
 			<div class="inputHolder">CountryCode: <input type="text" id="countryCode" name="countryCode" value="US"/><br></div>
-			<div class="inputHolder">ShopperLocale: <input type="text" id="shopperLocale" name="shopperLocale" value="en_GB"/><br></div>
+			<div class="inputHolder">ShopperLocale: <input type="text" id="shopperLocale" name="shopperLocale" value="en-US"/><br></div>
 			<div class="inputHolder">ShopperReference: <input type="text" id="shopperReference" name="shopperReference" value="localhostCheckout1"/><br></div>
 			<div class="inputHolder">Channel: <input type="text" id="channel" name="channel" value="Web"/><br></div>
 			<div class="inputHolder">MerchantAccount: <input type="text" id="merchantAccount" name="merchantAccount" value="ColinRood"/><br></div>
-			<input type="button" class="submitBtn" id="checkoutBtn" value="Checkout"/>
+			<input type="button" class="submitBtn center" id="checkoutBtn" value="Checkout"/>
 		</form>
 	</div>
 </body>
 
 <script>
+
+// Custom text
+var translationObject = {
+    "payButton": {
+        "en-US": "Subscribe",
+        "nl-NL": "Meer opties"
+    }
+};
 
 // Styling for checkout
 var sdkConfigObj = {
@@ -58,7 +66,7 @@ const setupCallback = function() {
 		}
 		catch (e) {
 			console.log(e);
-			document.getElementById("checkout").innerHTML = this.responseText;
+			document.getElementById("checkout").innerHTML = "this.responseText: " + this.responseText;
 		}
 	}
 };
