fix securedfields, add favicon, other minor fixes

--- a/HPP.html
+++ b/HPP.html
@@ -18,6 +18,7 @@
 var formData = {
 	"fields": [
 		["allowedMethods", ""],
+		["blockedMethods", ""],
 		["paymentAmount", "1499"],
 		["currencyCode", "USD"],
 		["countryCode", "US"],
