--- a/SecuredFields.html
+++ b/SecuredFields.html
@@ -2,6 +2,7 @@
 
 <head>
 	<script type="text/javascript" src="https://checkoutshopper-test.adyen.com/checkoutshopper/assets/js/sdk/checkoutSecuredFields.1.0.js"></script>
+	<script type="text/javascript" src="https://checkoutshopper-test.adyen.com/checkoutshopper/js/checkoutInitiatePayment.min.js"></script>
 	<script type="text/javascript" src="scripts/securedFields.js"></script>
 	<link rel="stylesheet" type="text/css" href="styles/style.css"></link>
 </head>
