move merchantAccount onto backend

--- a/3DSecure.html
+++ b/3DSecure.html
@@ -6,6 +6,7 @@
 	</head>
 	<body>
 		<div id="reactHolder"></div>
+		Please note that transactions cannot be completed on TEST
 	</body>
 </HTML>
 
@@ -20,8 +21,7 @@ var formData = {
 		["cvc", "737"],
 		["value", "1499"],
 		["currency", "USD"],
-		["reference", "Localhost 3DS"],
-		["merchantAccount", "ColinRood"]],
+		["reference", "Localhost 3DS"]],
 	"hiddenFields": [
 		["endpoint", "three_d_secure"],
 		["userAgent", navigator.userAgent]],
