--- a/HPP.html
+++ b/HPP.html
@@ -26,10 +26,7 @@ var formData = {
 		["shopperReference", "localhostShopper1"],
 		["shopperEmail", "test@email.com"],
 		["recurringContract", "ONECLICK"],
-		["merchantReference", "localhostHPP"],
-		["merchantAccount", "ColinRood"],
-		["skinCode", "rKJeo2Mf"],
-		["hmacKey", "BE1C271E9CD9D2F6611D2C7064FE9EE314DA58539195E92BF5AC706209A514DB"]],
+		["merchantReference", "localhostHPP"]],
 	"hiddenFields": [
 		["endpoint", "HPP"]],
 	"submitText": "Checkout"
