--- a/skipDetails.html
+++ b/skipDetails.html
@@ -23,10 +23,7 @@ var formData = {
 		["shopperLocale", "en_GB"],
 		["shopperReference", "localhostShopper1"],
 		["merchantReference", "localhostSkipDetails"],
-		["channel", "Web"],
-		["merchantAccount", "ColinRood"],
-		["skinCode", "rKJeo2Mf"],
-		["hmacKey", "BE1C271E9CD9D2F6611D2C7064FE9EE314DA58539195E92BF5AC706209A514DB"]],
+		["channel", "Web"]],
 	"hiddenFields": [
 		["endpoint", "skip_details"]],
 	"submitText": "Send request"
