move credentials to own file to allow changing merchantAccount easily

--- a/checkout_iframe.html
+++ b/checkout_iframe.html
@@ -85,6 +85,14 @@ const setupCallback = function() {
 					parent.setupVerify(pHookData);
 				}
 			}
+
+			// Other hooks
+			chckt.hooks.getDataFromSubmissionProcess = function(checkoutNode, formData) {
+				console.log("checkoutNode");
+				console.log(checkoutNode);
+				console.log("formData");
+				console.log(formData.toString());
+			}
 		}
 		catch (e) {
 			console.log(e);
