add SecuredFields direct integration

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
 	<h3 class="index-header">Checkout</h3>
 	<a class="index-link" href="checkout.html">Checkout</a><br>
-	<a class="index-link" href="SecuredFields.html">Secured Fields</a><br>
+	<a class="index-link" href="SecuredFieldsSDK.html">Secured Fields - SDK</a><br>
+	<a class="index-link" href="SecuredFieldsDirect.html">Secured Fields - Direct</a><br>
 	
 	<h3 class="index-header">Cards</h3>
 	<a class="index-link" href="CSE.html">Client Side Encryption (CSE)</a><br>
