fix secured fields, backend auth tweaks

--- a/skipDetails.html
+++ b/skipDetails.html
@@ -15,7 +15,7 @@
 
 var formData = {
 	"fields": [
-		["brandCode", "mc"],
+		["brandCode", "visa"],
 		["issuerId", ""],
 		["paymentAmount", "1499"],
 		["currencyCode", "USD"],
