3DS 2 advanced flow

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 	<h3 class="index-header">Cards</h3>
 	<a class="index-link" href="CSE.html">Client Side Encryption (CSE)</a><br>
 	<a class="index-link" href="3DSecure.html">3D Secure</a><br>
-	<a class="index-link" href="3DSecure2.html">3D Secure 2.0</a><br>
+	<a class="index-link" href="3DSecure2.html">3D Secure 2.0 Basic</a><br>
+	<a class="index-link" href="3DSecure2Advanced.html">3D Secure 2.0 Advanced</a><br>
 </body>
 
 </html>
