update 3DS 2 endpoints

--- a/3DSecure.html
+++ b/3DSecure.html
@@ -23,7 +23,7 @@ var formData = {
 		["currency", "USD"],
 		["reference", "Localhost 3DS"]],
 	"hiddenFields": [
-		["endpoint", "three_d_secure"],
+		["endpoint", "threeds1"],
 		["userAgent", navigator.userAgent]],
 	"submitText": "Send request"
 }
