--- a/3DSecure2Advanced.html
+++ b/3DSecure2Advanced.html
@@ -33,7 +33,7 @@
 <script>
 
 const SERVER_URL = "http://localhost:8000/cgi-bin/submit.py";
-const RETURN_URL = SERVER_URL + "?endpoint=result_page";
+const RETURN_URL = SERVER_URL + "?endpoint=threeds2_result_page";
 
 const CACHED_THREEDS_URL = "https://pal-test.adyen.com/threeds2simulator/acs/startMethod.shtml"
 
